# mnist-cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt  CmakeLists.txt  DataReader.cpp  DataReader.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  LinearAlg.cpp  LinearAlg.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  Normalizer.cpp  Normalizer.h  OneHotEncoder.cpp  OneHotEncoder.h  OutputLayer.cpp  OutputLayer.h  main.cpp
test/: CMakeLists.txt  LayerTests.cpp  NeuronTests.cpp  gtest.cpp
